change bg colour

--- a/templates/typerush/footer.html
+++ b/templates/typerush/footer.html
@@ -12,11 +12,11 @@
                     Leaderboard
                 </a>
             </li>
-            <li><a href="">
+            <li><a href="{% url 'typerush:user_login' %}">
                     Log In
                 </a>
             </li>
-            <li><a href="">
+            <li><a href="{% url 'typerush:register' %}">
                     Sign Up
                 </a>
             </li>
