--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -26,7 +26,7 @@ html {
     --orange: #E17055;
     --teal: #138972;
     
-    --bg: var(--darkest);
+    --bg: var(--black);
     --color: var(--lightest);
     --surface: var(--darker);
 }
@@ -121,11 +121,15 @@ nav li,
         padding: 1rem;
     }
     button:hover {
-        border: 1px solid var(--purple);
+        /*border: 1px solid var(--purple);
         transition: all 0.5s;
         background-color: var(--purple);
         color: var(--white);
-        padding: 1rem;
+        padding: 1rem;*/
+
+        background: var(--mint);
+        color: var(--black);
+        box-shadow: 0 0 5px var(--mint), 0 0 25px var(--mint), 0 0 50px var(--mint), 0 0 100px var(--mint);
 
     }
 }
