--- a/static/stylesheets/login.css
+++ b/static/stylesheets/login.css
@@ -7,7 +7,7 @@
     transform: translate(-50%, -50%);
     background: rgba(0, 0, 0, 0.5);
     box-sizing: border-box;
-    box-shadow: 0 15px 25px var(--teal);
+    box-shadow: 0 15px 25px var(--mint);
     border-radius: 10px;
     color: var(--lightest);
 }
@@ -72,6 +72,6 @@
 
 .login-box form a:hover {
     background: var(--mint);
-    color: var(--dark);
+    color: var(--black);
     box-shadow: 0 0 5px var(--mint), 0 0 25px var(--mint), 0 0 50px var(--mint), 0 0 100px var(--mint);
 }
