--- a/static/stylesheets/login.css
+++ b/static/stylesheets/login.css
@@ -1,16 +1,29 @@
+body, html {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1; 
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    padding: 1rem; 
+}
 
 .login-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 400px;
+    max-width: 400px;
+    min-width: 300px;
+    width: 100%;
     padding: 40px;
-    transform: translate(-50%, -50%);
+    margin: auto;
+    margin-top: 80px;
+    margin-bottom: 80px;
     background: rgba(0, 0, 0, 0.5);
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px var(--mint);
     border-radius: 10px;
     color: var(--lightest);
+    box-shadow: 0 15px 25px var(--mint);
 }
 
 .login-box h2 {
@@ -73,6 +86,14 @@
 
 .login-box form a:hover {
     background: var(--mint);
-    color: var(--black);
+    color: var(--dark);
     box-shadow: 0 0 5px var(--mint), 0 0 25px var(--mint), 0 0 50px var(--mint), 0 0 100px var(--mint);
+}
+
+@media (max-width: 768px) {
+    .login-box {
+        width: 90%; 
+        padding: 20px; 
+    }
+   
 }
