--- a/templates/typerush/leaderboard.html
+++ b/templates/typerush/leaderboard.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </td>
-                <td>53</td>
+                <td id="score">53</td>
             </tr>
             {% endfor %}
             <!-- END PART TO DELETE -->
