--- a/templates/typerush/header.html
+++ b/templates/typerush/header.html
@@ -2,7 +2,7 @@
 
 <div class="header-content">
     <div class="header-title">
-        <img class="main-logo" src="{% static 'images/logo.png' %}" alt="logo" width="110px" height="52px">
+        <img class="main-logo" src="{% static 'images/icon.png' %}" alt="logo" width="200px" height="110px" >
 
         <h1> </h1>
     </div>
