Added cool bg animation.
- can be removed if too distracting.
- minor fixes to fonts

--- a/templates/typerush/header.html
+++ b/templates/typerush/header.html
@@ -1,12 +1,12 @@
 {% load static %} 
 
 <div class="header-content">
+    
     <div class="header-title">
         <img class="main-logo" src="{% static 'images/icon.png' %}" alt="logo" width="200px" height="110px" >
 
-        <h1> </h1>
+        <h1>TypeRush</h1>
     </div>
-
     <nav>
         <ul class="header-nav-buttons">
             <li><a href="{% url 'typerush:home' %}">
@@ -34,7 +34,7 @@
             </a>
             </li>
         </ul>
-
+        
     </nav>
 </div>
 
