--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -19,14 +19,10 @@
 }
 
 * {
-    font-family: 'KillerTech';
+    font-family: 'KillerTech'; 
 }
 
-header button {
-    font-family: 'CyberwayRiders';
-}
-
-footer * {
+header * {
     font-family: 'CyberwayRiders';
 }
 
@@ -63,11 +59,6 @@ html {
     --surface: var(--darker);
 }
 
-body {
-    background-color: var(--bg);
-    color: var(--white)
-}
-
 /* Container for entire window - flexbox*/
 
 .container {
@@ -84,6 +75,7 @@ header {
     align-items: center;
     padding: 5px;
     border-bottom: 1px solid var(--mint);
+    margin: auto 15% auto 15%;
 }
 .main-icon {
     max-width: 100%;
@@ -91,7 +83,7 @@ header {
 }
 .header-title {
     text-align: center;
-    font-size: larger;
+    font-size: x-large;
     
 }
 nav {
@@ -108,6 +100,7 @@ footer {
     text-align: center;
     padding: 10px;
     border-top: 1px solid var(--mint);
+    margin: auto 15% auto 15%;
 }
 
 .footer-title, .copyright {
@@ -166,3 +159,98 @@ nav li,
 
     }
 }
+
+
+body{
+    background-color: var(--bg);
+    color: var(--white);
+    line-height: 1.6;
+    position: relative;
+    
+}
+
+/* animation guide from: Osorina Irina on CodePen */
+.lines{
+    top: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    height: 100%;
+    margin: auto;
+    width: 90vw;
+    z-index: -1;
+}
+  
+.line{
+    position: absolute;
+    width: 1px;
+    height: 100%;
+    top: 0;
+    left: 5%;
+    background: rgba(255, 255, 255, 0.1);
+    overflow: hidden;
+
+    &::after{
+        content: '';
+        display: block;
+        position: absolute;
+        height: 15vh;
+        width: 100%;
+        top: -50%;
+        left: 0;
+        background: linear-gradient(to bottom, var(--mint) 0%, var(--mint) 75%, var(--white) 100%);
+        animation: drop 7s 0s infinite;
+        animation-fill-mode: forwards;
+        animation-timing-function: cubic-bezier(0.4, 0.26, 0, 0.97);
+    }
+
+    &:nth-child(1){
+        margin-left: -5%;
+
+        &::after{
+            animation-delay: 2s;
+        }
+    }     
+        
+    &:nth-child(3){
+        margin-left: 5%;
+        &::after{
+            animation-delay: 2.5s
+        }
+    }
+    
+    &:nth-child(4){
+        margin-left: 90%;
+        &::after{
+            animation-delay: 2s
+        }
+    }   
+    &:nth-child(5){
+        margin-left: 85%;
+        &::after{
+            animation-delay: 1.5s
+        }
+    }   
+    &:nth-child(6){
+        margin-left: 95%;
+        &::after{
+            animation-delay: 1s
+        }
+    }   
+    
+    
+    
+    
+        
+}
+  
+@keyframes drop{
+    0% { 
+        top: -50%; 
+    } 
+      
+    100% { 
+        top: 110%;
+    }    
+}
+ 
