--- a/templates/typerush/base.html
+++ b/templates/typerush/base.html
@@ -18,14 +18,27 @@
 
 <body>
     <div class="container">
+        <div class="lines">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </div>
+        
         <header>
+
         {% block header_block %}
             {% include "typerush/header.html" %}
         {% endblock %}
+
         </header>
         <main>
+                
             {% block main_block %}
             {% endblock %}
+
         </main>
         {% block sidebar_block %}
         {% endblock %}
