--- a/static/stylesheets/base.css
+++ b/static/stylesheets/base.css
@@ -24,6 +24,7 @@
 
 header * {
     font-family: 'CyberwayRiders';
+    margin: .2em;
 }
 
 html {
@@ -73,7 +74,6 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5px;
     border-bottom: 1px solid var(--mint);
     margin: auto 15% auto 15%;
 }
@@ -84,7 +84,6 @@ header {
 .header-title {
     text-align: center;
     font-size: x-large;
-    
 }
 nav {
     text-align: center;
