--- a/templates/typerush/login.html
+++ b/templates/typerush/login.html
@@ -13,21 +13,17 @@
 <div class="login-box">
     
     <h2>Login</h2>
-    <form action="">
+    <form action="" method="post"> <!-- Added method="post" for form submission -->
+        {% csrf_token %} <!-- Include CSRF token -->
         <div class="user-box">
-            <input type="text" required>
+            <input type="text" name="username" required> <!-- Added name="username" -->
             <label for="">Username</label>
         </div>
         <div class="user-box">
-            <input type="password" required>
+            <input type="password" name="password" required> <!-- Added name="password" -->
             <label for="">Password</label>
         </div>
-        <a href="">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>Submit
-        </a>
+        <button type="submit">Submit</button> <!-- Changed anchor tag to button for form submission -->
     </form>
 </div>
 {% endblock %}
