--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -40,6 +40,6 @@ main .get-started-button{
 /* W3schools tutorial code for box-shadow*/
 main .get-started-button:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    background-color: var(--mandarin);
-    box-shadow: 0 0 5px var(--mandarin), 0 0 25px var(--mandarin), 0 0 50px var(--mandarin), 0 0 100px var(--mandarin);
+    background-color: var(--purple);
+    box-shadow: 0 0 5px var(--purple), 0 0 25px var(--purple), 0 0 50px var(--purple), 0 0 100px var(--purple);
 }
