--- a/static/stylesheets/register.css
+++ b/static/stylesheets/register.css
@@ -1,4 +1,3 @@
-
 main {
     flex-grow: 1; 
     display: flex; 
@@ -7,7 +6,7 @@ main {
     padding: 1rem; 
 }
 
-.login-box {
+.register-box {
     max-width: 400px;
     min-width: 300px;
     width: 100%;
@@ -21,7 +20,7 @@ main {
     box-shadow: 0 15px 25px var(--mint);
 }
 
-.login-box h2 {
+.register-box h2 {
     margin: 0 0 30px;
     padding: 0;
     color: var(--white);
@@ -63,7 +62,7 @@ main {
     font-size: 12px;
 }
 
-.login-box form a {
+.register-box form a {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
@@ -79,7 +78,7 @@ main {
     border-radius: 5px;
 }
 
-.login-box form a:hover {
+.register-box form a:hover {
     background: var(--purple);
     border-color: var(--purple);
     color: var(--white);
@@ -87,19 +86,59 @@ main {
 }
 
 @media (max-width: 768px) {
-    .login-box {
+    .register-box {
         width: 90%; 
         padding: 20px; 
     }
    
 }
 
-.back-video {
-    position: fixed; 
-    top: 130px;
-    left: 40px;
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    z-index: -1;
+.upload{
+    width: 100px;
+    position: relative;
+    margin:auto;
+    padding-bottom: 30px;
+}
+
+.upload img{
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    border: 3px solid var(--darker);
+}
+
+.upload .round{
+    position: absolute;
+    bottom: 25px;
+    right: 0px;
+    background: var(--mint);
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    text-align: center;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center; 
+    justify-content: center;
+    
+}
+
+.upload .round input[type='file']{
+    position: absolute;
+    transform: scale(2);
+    opacity: 0;
+}
+
+input[type=file]::-webkit-file-upload-button{
+    cursor: pointer;
+}
+
+.upload .round:hover{
+    background: var(--purple);
+    box-shadow: 0 0 5px var(--purple), 0 0 25px var(--purple), 0 0 50px var(--purple), 0 0 100px var(--purple);
+}
+
+.upload .round:hover i.fa-camera {
+    color: #fff !important; 
 }
