--- a/templates/typerush/login.html
+++ b/templates/typerush/login.html
@@ -23,7 +23,7 @@
             <input type="password" name="password" required> <!-- Added name="password" -->
             <label for="">Password</label>
         </div>
-        <button type="submit">Submit</button> <!-- Changed anchor tag to button for form submission -->
+        <button type="submit" class="login-button">Submit</button> <!-- Changed anchor tag to button for form submission -->
     </form>
 </div>
 {% endblock %}
