--- a/static/stylesheets/home.css
+++ b/static/stylesheets/home.css
@@ -41,5 +41,6 @@ main .get-started-button{
 main .get-started-button:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     background-color: var(--purple);
+    color: #000;
     box-shadow: 0 0 5px var(--purple), 0 0 25px var(--purple), 0 0 50px var(--purple), 0 0 100px var(--purple);
 }
