--- a/static/stylesheets/login.css
+++ b/static/stylesheets/login.css
@@ -103,3 +103,27 @@ main {
     object-fit: cover;
     z-index: -1;
 }
+
+.login-box .login-button {
+    display: inline-block;
+    padding: 10px 20px;
+    color: var(--lightest);
+    font-size: 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    background: var(--bg); 
+    border: 1px solid var(--mint);
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 0.5s;
+    margin-top: 40px;
+    letter-spacing: 4px;
+}
+
+
+.login-box .login-button:hover {
+    background: var(--purple);
+    color: var(--white);
+    border-color: var(--purple);
+    box-shadow: 0 0 5px var(--purple), 0 0 25px var(--purple), 0 0 50px var(--purple), 0 0 100px var(--purple);
+}
