Leaderboard toggle option works now

--- a/static/stylesheets/leaderboard.css
+++ b/static/stylesheets/leaderboard.css
@@ -133,7 +133,8 @@ th, td {
 .select-mode {
     margin: 0 5% 2% 0;
     position: relative;
-    button{
+    
+    .selectMode{
         transition: all 0.5s;
         color: inherit;
         border: 1px solid var(--mint);
@@ -142,12 +143,19 @@ th, td {
     }
 }
 
-.select-mode button:hover {
+.selectMode:hover {
     transition: all 0.5s;
     
     background-color: var(--purple);
     border:1px solid var(--purple);
     color:var(--darkest);
+}
+
+.selectMode.selected {    
+    background-color: var(--purple);
+    border:1px solid var(--purple);
+    color:var(--darkest);
+
 }
 
 .select-mode{
