--- a/templates/typerush/base.html
+++ b/templates/typerush/base.html
@@ -3,6 +3,9 @@
 <html>
 
 <head>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width", initial-scale=1.0>
     <link rel="icon" type="image/x-icon" href="{% static 'images/icon.png' %}">
