--- a/templates/typerush/footer.html
+++ b/templates/typerush/footer.html
@@ -23,7 +23,7 @@
         </ul>
     </div>
     <div class="footer-title">
-        | Type Racer
+        | TypeRush
     </div>
     <div class="copyright">
         | © 2024, WAD 2B.
