--- a/templates/typerush/leaderboard.html
+++ b/templates/typerush/leaderboard.html
@@ -70,6 +70,7 @@
                     {% for game in top_games %}
                     <tr>
                         <td>{{ forloop.counter}}</td>
+                        <td>{{game.pro}}</td>
                         <td>{{game.user}}</td>
                         <td>{{game.score}}</td>
                     </tr>
