--- a/templates/typerush/login.html
+++ b/templates/typerush/login.html
@@ -16,11 +16,11 @@
     <form action="" method="post"> <!-- Added method="post" for form submission -->
         {% csrf_token %} <!-- Include CSRF token -->
         <div class="user-box">
-            <input type="text" name="username" required> <!-- Added name="username" -->
+            <input type="text" name="username" onfocus="this.value=''" required> <!-- Added name="username" -->
             <label for="">Username</label>
         </div>
         <div class="user-box">
-            <input type="password" name="password" required> <!-- Added name="password" -->
+            <input type="password" name="password" onfocus="this.value=''" required> <!-- Added name="password" -->
             <label for="">Password</label>
         </div>
         <button type="submit" class="login-button">Submit</button> <!-- Changed anchor tag to button for form submission -->
