--- a/templates/typerush/profile.html
+++ b/templates/typerush/profile.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block main_block %}
-<div class = "left-panel"></div>
+<div class = "top-panel"></div>
 
-<div class = "right-panel"></div>
+<div class = "bottom-panel"></div>
 {% endblock %}
