--- a/static/stylesheets/register.css
+++ b/static/stylesheets/register.css
@@ -142,3 +142,19 @@ input[type=file]::-webkit-file-upload-button{
 .upload .round:hover i.fa-camera {
     color: #fff !important; 
 }
+
+/* slightly better than before */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+
+    -webkit-text-fill-color: var(--white);
+    -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+    background-color: var(--bg);
+}
