--- a/templates/typerush/footer.html
+++ b/templates/typerush/footer.html
@@ -12,6 +12,12 @@
                     Leaderboard
                 </a>
             </li>
+            {% if user.is_authenticated %}
+            <li><a href="{% url 'typerush:profile' %}">
+                My Profile
+            </a>
+            </li>
+            {% else %}
             <li><a href="{% url 'typerush:user_login' %}">
                     Log In
                 </a>
@@ -20,6 +26,7 @@
                     Sign Up
                 </a>
             </li>
+            {% endif %}
         </ul>
     </div>
     <div class="footer-title">
