Added Profile template
- removed the @login_required decorator to be able to view the profile page.
!! important !! remember to change this back and add the profile to the user section

--- a/static/stylesheets/leaderboard.css
+++ b/static/stylesheets/leaderboard.css
@@ -54,7 +54,8 @@ main {
     width: 17vh;
     border-radius: 50%;
 }
-.data-items img {
+
+td img {
     border-radius: 50%;
     height: 5vh;
     width: 5vh;
