--- a/templates/typerush/header.html
+++ b/templates/typerush/header.html
@@ -43,6 +43,12 @@
                 </button>
             </a>
             </li>
+            <li><a href="{% url 'typerush:profile' %}">
+                <button type="button" id="profileButton">
+                    My Profile
+                </button>
+            </a>
+            </li>
             {% endif %}
         </ul>
         
