--- a/static/stylesheets/profile.css
+++ b/static/stylesheets/profile.css
@@ -1,2 +1,158 @@
 @import url('/static/stylesheets/base.css');
 
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+    margin: 0;
+    padding: 0;
+}
+
+:root {
+    --primary-bg: #171717;
+    --secondary-bg: #262626;
+    --accent-bg: #4f46e5;
+
+    --primary-color: #fff;
+    --secondary-color: rgba(255,255,255, 70%);
+    --accent-color: #818cf8;
+
+    --border-color: rgba(255,255,255, 30%);
+    
+    --username-size: 32px;
+    --title-size: 2em;
+    --subtitle: 2em;
+}
+
+main {
+    margin: 0 20% 0 20%;
+    padding: 8% 0 5% 0;
+    display: flex;
+    min-height: 50vh;
+
+}
+
+.profile-card {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 100%;
+    background-color: var(--darker);
+    border-radius: 40px;
+}
+/* ------ profile header section */
+.profile-header {
+    margin: 10px;
+    border-radius: 30px 30px 0 0;
+    position: relative;
+}
+    .main-profile {
+        display: flex;
+        align-items: center;
+        position: absolute;
+        inset: calc(100% - 75px) auto auto 70px;
+    }
+        .profile-image img{
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 10px solid var(--darker);
+        }
+        .profile-names {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            background-color: var(--darker);
+            padding: 10px 30px;
+            border-radius: 0 50px 50px 0;
+            transform: translateX(-10px);
+        }
+            .fullname {
+                color: var(--purple);
+            }
+
+
+.profile-body {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 70px;
+    padding: 60px;
+}
+    .profile-actions {
+        display: grid;
+        grid-template-rows: repeat(2, max-content) auto;
+        gap: 10px;
+        margin-top: 30px;
+        font-size: x-large;
+
+    }
+    .profile-actions button {
+        all: unset;
+        padding: 10px;
+        border: 2px solid var(--purple);
+        text-align: center;
+        border-radius: 10px;
+    }
+        .profile-actions .rank {background-color: var(--purple)}
+
+        .data {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            color: var(--secondary-color);
+            padding: 30px;
+            text-align: center;
+            border: 1px solid var(--lighter);
+            border-radius: 15px;
+        }
+            .important-data {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+            .other-data {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                background-color: var(--secondary-bg);
+                padding: 20px;
+                border-radius: 10px;
+            }
+            .data-item .value {
+                color: var(--purple);
+            }
+                .important-data, .other-data .value {
+                    font-size: var(--title-size);
+                }
+                .important-data, .other-data .title {
+                    font-size: var(--subtitle);
+                }
+.history{
+    display: flex;
+    flex-direction: column;
+    background-color: var(--darker);
+    min-height: 50vh;
+    border: 1px solid var(--dark);
+    padding: 3% 4% 4% 4%;  
+    margin: 5%;
+
+    h1 {
+        margin: 1% 3% 3% 1%;
+        font-size: var(--title-size);
+        color: var(--purple);
+    }
+}
+table {
+    padding-top: 3%;
+    width: 100%;
+    text-align: left;
+    font-size: var(--subtitle);
+}
+
+th, td {
+    border-bottom: 1px solid #ddd;
+    padding: 4px;
+    color: var(--secondary-color);
+}
