--- a/templates/typerush/leaderboard.html
+++ b/templates/typerush/leaderboard.html
@@ -70,7 +70,8 @@
                     {% for game in top_games %}
                     <tr>
                         <td>{{ forloop.counter}}</td>
-                        <td>{{game.user}}</td>
+                        <td><img src="{{ MEDIA_URL }}profile_images/{{ game.user.profile_picture }}" alt="profile-img"/>
+                         {{game.user}}</td>
                         <td>{{game.score}}</td>
                     </tr>
                     {% endfor %}
