Fixing profile pic upload/saving

--- a/templates/typerush/leaderboard.html
+++ b/templates/typerush/leaderboard.html
@@ -81,5 +81,8 @@
         </table>
     </div>
 
+<script>
+    var MEDIA_URL = "{{ MEDIA_URL }}";
+</script>
 <script src="{% static 'script/SelectingModes.js' %}"></script>
 {% endblock %}
