--- a/static/stylesheets/register.css
+++ b/static/stylesheets/register.css
@@ -158,3 +158,19 @@ select:-webkit-autofill:focus {
     -webkit-box-shadow: 0 0 0px 1000px #000 inset;
     background-color: var(--bg);
 }
+
+.form-control{
+    margin-bottom: 7%;
+}
+
+#dropbox{
+    position: relative;
+
+    label {
+        top: 0;
+        left: 0;
+        padding: 10px 0;
+        font-size: 12px;
+        color: var(--mint);
+ }
+}
