easier textbox to work with (with inspo from old one ofc)

--- a/templates/typerush/game.html
+++ b/templates/typerush/game.html
@@ -30,10 +30,10 @@ HippoType
     </h1>
     <div id="game" tabindex="0">
         <div id="words"></div>
-        <div id="cursor"></div>
-        <div id="focus-error">Click here to start!</div>
-        <div id="textbox-container" style="display: none;">
+        <!-- <div id="focus-error">Click here to start!</div> -->
+        <div id="textbox-container">
             <input type="text" id="user-input" placeholder="type here..">
+            <div id="cursor"></div>
         </div>
     </div>
 </main>
