link get started button to game

--- a/templates/typerush/home.html
+++ b/templates/typerush/home.html
@@ -16,7 +16,7 @@
         Game Instruction not added yet. But it will look like this when added.
     </div>
         
-    <button type = "button" class="button get-started-button">GET STARTED</button>
+    <a href="{% url 'typerush:game' %}" button type = "button" class="button get-started-button">GET STARTED</button>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="{% static 'script/JQuery.js' %}"></script>
