Fixed script on game

--- a/templates/typerush/base.html
+++ b/templates/typerush/base.html
@@ -52,8 +52,11 @@
         </footer>
         
     </div>
-    
-    <script src="{% static 'script/JQuery.js' %}"></script>
+
+    {% block script %}
+        <script src="{% static 'script/JQuery.js' %}"></script>
+    {% endblock %}
+
 </body>
 
 </html>
