--- a/templates/typerush/game.html
+++ b/templates/typerush/game.html
@@ -6,7 +6,7 @@ HippoType
 {% endblock %}
 
 {% block css %}
-<link href="{% static 'stylesheets/styles.css' %}" rel="stylesheet" type="text/css" />
+<!-- <link href="{% static 'stylesheets/styles.css' %}" rel="stylesheet" type="text/css" /> -->
 <link href="{% static 'stylesheets/game.css' %}" rel="stylesheet" type="text/css" />
 {% endblock %}
 
@@ -42,5 +42,5 @@ HippoType
 
 
 {% block script %}
-<script src="{% static 'script/GameLogic.js' %}"></script>
+    <script src="{% static 'script/GameLogic.js' %}"></script>
 {% endblock %}
